--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<div class="jumbotron">
 		<nav>
-			<img src="facebook.jpg" alt="">
+		    <h1>SIMI</h1>
+			<img src="" alt="">
 			<ul class="navigation">
 				<li><a href="#">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
@@ -82,7 +83,7 @@
 		<div class="winners container">
 			<div class="winner">
 				<div class="profile">
-					<img src="img5.jpg" alt="">
+					<img src="img4.jpg" alt="">
 					<div class="name">
 						<h4>Olubusayo Seyitan</h4>
 						<p>Farmer</p>
