--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 	<div class="jumbotron">
 		<nav>
-		    <h1>SIMI</h1>
-			<img src="" alt="">
+			<img src="logo2.png" alt="Logo" class="logo">
 			<ul class="navigation">
 				<li><a href="#">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
