--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="pitch">
 			<h1>Let's Rice</h1>
 			<h1>Together.</h1>
-			<button class="btn-yellow">LEARN MORE</button>
+			<button class="btn-yellow"><h2>LEARN MORE</h2></button>
 		</div>
 	</div>
 	<h1 class="text-center wwd">What We Do</h1>
