--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<h1>Join Our Newsletter</h1>
 			<form action="">
 				<input type="email" placeholder="Your e-mail here..." class="email-input">
-				<button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
+				<button type="submit" class="btn-yellow submit"><h2>SUBSCRIBE</h2></button>
 			</form>
 			<div class="footer-menu">
 				<ul>
