--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	<footer>
 		<div>
 			<h1>Join Our Newsletter</h1>
-			<form action="">
+			<form netlify>
 				<input type="email" placeholder="Your e-mail here..." class="email-input">
 				<button type="submit" class="btn-yellow submit"><h2>SUBSCRIBE</h2></button>
 			</form>
