--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <body>
     <div class="white-bg">
         <div class="container">
+            <h1 class="mb-2">Drop that message.</h1>
             <div class="grid">
-                <form action="" netlify>
-                    <h1>Drop that message.</h1>
+                <form action="" netlify class="contact-form">
                     <input type="text" name="name" id="" placeholder="Your name here...">
                     <input type="email" name="email" id="" placeholder="Your email here...">
                     <textarea name="message" placeholder="Your message here..."></textarea>
+                    <button type="submit" class="btn-yellow"><h2>SHOOT</h2></button>
                 </form>
                 <img src="" alt="">
             </div>
@@ -26,7 +28,7 @@
             <h1>Join Our Newsletter</h1>
             <form action="">
                 <input type="email" name="email" placeholder="Your e-mail here...">
-                <button type="submit" class="btn-yellow">SUBSCRIBE</button>
+                <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
             </form>
             <div class="footer-menu">
                 <ul>
