--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,15 @@
 <body>
     <div class="white-bg">
         <div class="container">
+            <nav>
+                <img src="logo2.png" alt="Logo" class="logo">
+                <ul class="navigation">
+                    <li><a href="#">PLANS</a></li>
+                    <li><a href="#">COMPETITION</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li class="focus"><a href="#">CONTACT US</a></li>
+                </ul>
+            </nav>
             <h1 class="mb-2">Drop that message.</h1>
             <div class="grid">
                 <form action="" netlify class="contact-form">
@@ -27,7 +36,7 @@
         <div class="container">
             <h1>Join Our Newsletter</h1>
             <form action="">
-                <input type="email" name="email" placeholder="Your e-mail here...">
+                <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
                 <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
             </form>
             <div class="footer-menu">
