--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="#">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
 				<li><a href="#">ABOUT US</a></li>
-				<li><a href="#">CONTACT US</a></li>
+				<li><a href="contact.html">CONTACT US</a></li>
 			</ul>
 		</nav>
 		<div class="pitch">
