--- a/plans.html
+++ b/plans.html
@@ -10,17 +10,15 @@
 <body>
     <div class="white-bg bg">
         <div class="container">
-            <header>
-                <img src="logo2.png" alt="logo">
-                <nav>
-                    <ul>
-                        <li><a href="#">PLANS</a></li>
-                        <li><a href="#">COMPETITION</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                    </ul>
-                </nav>
-            </header>
+            <nav>
+                <img src="logo2.png" alt="Logo" class="logo">
+                <ul class="navigation">
+                    <li class="focus"><a href="plans.html">PLANS</a></li>
+                    <li><a href="#">COMPETITION</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
+                </ul>
+            </nav>
             <div class="grid">
                 <div class="image">
                     <img src="" alt="">
@@ -42,25 +40,25 @@
     </div>
     <div class="yellow-bg bg">
         <div class="container">
-            <div class="grid">
+            <div class="opportunity">
                 <h1>The Opportunity</h1>
                 <p>What are we proposing? Here - have a look at what your investment goes into. We want to give you a total breakdown of what goes on should you choose to invest.</p>
+            </div>
+            <div class="grid">
                 <div class="text">
                     <h4>Capital Requirement = N20,000,000</h4>
                     <h4>Minimum Investment = N2,000,000</h4>
                     <div class="white-box">
-                        <ul>
-                            <li>- Two-year term – 10% first year, 20% second year, break option</li>
-                            <li><h4>- Return Terms – Paid Monthly</h4></li>
-                            <ul>
-                                <li>1% pm from months 2 – 11,</li>
-                                <li>2% from months 14 - 23</li>
-                                <ul>
-                                    <li>e.g. N20,000 x 10 (Months 2 – 11) N200,000+ N40,000 x 10 (Months 14 – 23) N400,000 + N2,000,000 in month 24.</li>
-                                </ul>
+                        <p>- Two-year term – 10% first year, 20% second year, break option</p>
+                        <h4>- Return Terms – Paid Monthly</h4>
+                        <div class="mr-10">
+                            <p>  - 1% pm from months 2 – 11,</p>
+                            <p>  - 2% from months 14 - 23</p>
+                            <ul class="mr-10">
+                                <li><p>e.g. N20,000 x 10 (Months 2 – 11) N200,000+ N40,000 x 10 (Months 14 – 23) N400,000 + N2,000,000 in month 24.</p></li>
                             </ul>
-                        </ul>
-                        <h4>TOTAL - N2,600,000</h4>
+                        </div>
+                        <h4 class="total">TOTAL - N2,600,000</h4>
                     </div>
                     <p>- Fixed Term – 24 months investment with optional break at 12th month.</p>
                     <p>- All produce comprehensively insured.</p>
@@ -93,8 +91,8 @@
         <div class="container">
             <h1>Join Our Newsletter</h1>
             <form action="">
-                <input type="email" name="email" placeholder="Your e-mail here...">
-                <button type="submit" class="btn-yellow">SUBSCRIBE</button>
+                <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
+                <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
             </form>
             <div class="footer-menu">
                 <ul>
