--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <nav>
                 <img src="logo2.png" alt="Logo" class="logo">
                 <ul class="navigation">
-                    <li><a href="#">PLANS</a></li>
+                    <li><a href="plans.html">PLANS</a></li>
                     <li><a href="#">COMPETITION</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li class="focus"><a href="#">CONTACT US</a></li>
