--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<nav>
 			<img src="logo2.png" alt="Logo" class="logo">
 			<ul class="navigation">
-				<li><a href="#">PLANS</a></li>
+				<li><a href="plans.html">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
 				<li><a href="#">ABOUT US</a></li>
 				<li><a href="contact.html">CONTACT US</a></li>
