--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,19 @@
                 </ul>
             </nav>
             <h1 class="mb-2">Drop that message.</h1>
-            <div class="grid">
+            <div class="form-container">
                 <form action="" netlify class="contact-form">
                     <input type="text" name="name" id="" placeholder="Your name here...">
                     <input type="email" name="email" id="" placeholder="Your email here...">
                     <textarea name="message" placeholder="Your message here..."></textarea>
                     <button type="submit" class="btn-yellow"><h2>SHOOT</h2></button>
                 </form>
-                <img src="" alt="">
             </div>
         </div>
     </div>
     <div class="green-bg">
         <div class="container">
-            <h1>Join Our Newsletter</h1>
+            <h1 class="invite">Join Our Newsletter</h1>
             <form action="">
                 <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
                 <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
