--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="jumbotron">
 		<nav>
-			<img src="logo2.png" alt="Logo" class="logo">
+			<img src="assets/logo2.png" alt="Logo" class="logo">
 			<ul class="navigation">
 				<li><a href="plans.html">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
@@ -45,7 +45,7 @@
 	<div class="grid-container">
 		<div class="grid container">
 			<div class="image">
-				<img src="img1.png" alt="">
+				<img src="assets/img1.png" alt="">
 			</div>
 			<div class="text">
 				<h1>Increase your earning potentials as a farmer.</h1>
@@ -62,14 +62,14 @@
 				<button class="btn-yellow"><h2>INVEST IN RICE</h2></button>
 			</div>
 			<div class="image">
-				<img src="img2.png" alt="">
+				<img src="assets/img2.png" alt="">
 			</div>
 		</div>
 	</div>
 	<div class="grid-container">
 		<div class="grid container">
 			<div class="image">
-				<img src="img3.png" alt="">
+				<img src="assets/img3.png" alt="">
 			</div>
 			<div class="text">
 				<h1>Win amazing take-home prizes.</h1>
@@ -83,7 +83,7 @@
 		<div class="winners container">
 			<div class="winner">
 				<div class="profile">
-					<img src="img4.jpg" alt="">
+					<img src="assets/img4.jpg" alt="">
 					<div class="name">
 						<h4>Olubusayo Seyitan</h4>
 						<p>Farmer</p>
@@ -93,7 +93,7 @@
 			</div>
 			<div class="winner">
 				<div class="profile">
-					<img src="img5.jpg" alt="">
+					<img src="assets/img5.jpg" alt="">
 					<div class="name">
 						<h4>Bart Kolawole</h4>
 						<p>Lawyer and Livestock Farmer</p>
@@ -103,7 +103,7 @@
 			</div>
 			<div class="winner">
 				<div class="profile">
-					<img src="img5.jpg" alt="">
+					<img src="assets/img5.jpg" alt="">
 					<div class="name">
 						<h4>Puleng Vezi</h4>
 						<p>Student</p>
