--- a/plans.html
+++ b/plans.html
@@ -22,7 +22,7 @@
             </nav>
             <div class="grid">
                 <div class="image">
-                    <img src="" alt="">
+                    <img src="assets/rice.jpg" alt="">
                 </div>
                 <div class="text">
                     <h1>THE MARKET</h1>
@@ -34,47 +34,61 @@
             </div>
             <div class="returns">
                 <h1>The Returns</h1>
-                <img src="" alt="">
+                <div class="illustration">
+                    <figure>
+                        <img src="assets/path1.svg" alt="">
+                        <figcaption>Local Rice</figcaption>
+                    </figure>
+                    <div class="symbol">
+                        <h1>-</h1>
+                    </div>
+                    <figure>
+                        <img src="assets/path2.svg" alt="">
+                        <figcaption>Stones</figcaption>
+                    </figure>
+                    <div class="symbol">
+                        <h1>=</h1>
+                    </div>
+                    <figure>
+                        <img src="assets/path3.svg" alt="">
+                        <figcaption>Money</figcaption>
+                    </figure>
+                </div>
                 <p>Local rice minus Stones = Good profit</p>
             </div>
         </div>
     </div>
     <div class="yellow-bg bg">
-        <div class="container">
+        <div class="container the-opportunity">
             <div class="opportunity">
                 <h1>The Opportunity</h1>
                 <p>What are we proposing? Here - have a look at what your investment goes into. We want to give you a total breakdown of what goes on should you choose to invest.</p>
             </div>
-            <div class="grid">
-                <div class="text">
-                    <h4>Capital Requirement = N20,000,000</h4>
-                    <h4>Minimum Investment = N2,000,000</h4>
-                    <div class="white-box">
-                        <p>- Two-year term – 10% first year, 20% second year, break option</p>
-                        <h4>- Return Terms – Paid Monthly</h4>
-                        <div class="mr-10">
-                            <p>  - 1% pm from months 2 – 11,</p>
-                            <p>  - 2% from months 14 - 23</p>
-                            <ul class="mr-10">
-                                <li><p>e.g. N20,000 x 10 (Months 2 – 11) N200,000+ N40,000 x 10 (Months 14 – 23) N400,000 + N2,000,000 in month 24.</p></li>
-                            </ul>
-                        </div>
-                        <h4 class="total">TOTAL - N2,600,000</h4>
+            <div class="text">
+                <h4>Capital Requirement = N20,000,000</h4>
+                <h4>Minimum Investment = N2,000,000</h4>
+                <div class="white-box">
+                    <p>- Two-year term – 10% first year, 20% second year, break option</p>
+                    <h4>- Return Terms – Paid Monthly</h4>
+                    <div class="mr-10">
+                        <p>  - 1% pm from months 2 – 11,</p>
+                        <p>  - 2% from months 14 - 23</p>
+                        <ul class="mr-10">
+                            <li><p>e.g. N20,000 x 10 (Months 2 – 11) N200,000+ N40,000 x 10</p>
+                            <p>(Months 14 – 23) N400,000 + N2,000,000 in month 24.</p></li>
+                        </ul>
                     </div>
-                    <p>- Fixed Term – 24 months investment with optional break at 12th month.</p>
-                    <p>- All produce comprehensively insured.</p>
+                    <h4 class="total">TOTAL - N2,600,000</h4>
                 </div>
-                <div class="image">
-                    <img src="" alt="">
-                </div>
+                <p>- Fixed Term – 24 months investment with optional break at 12th month.</p>
+                <p>- All produce comprehensively insured.</p>
             </div>
         </div>
     </div>
     <div class="white-bg">
         <div class="container">
-            <div class="text">
+            <div class="text strategy">
                 <h1>The Strategy</h1>
-                <img src="" alt="">
                 <p>Upstream to full-stream, Nigeria’s best quality local rice.</p>
                 <h4>Upstream to Full-Stream Timeline</h4>
                 <p>Summer 2020 – QA, Bag, Market, Distribute</p>
