--- a/plans.html
+++ b/plans.html
@@ -12,7 +12,7 @@
     <div class="white-bg bg">
         <div class="container">
             <nav>
-                <img src="logo2.png" alt="Logo" class="logo">
+                <img src="assets/logo2.png" alt="Logo" class="logo">
                 <ul class="navigation">
                     <li class="focus"><a href="plans.html">PLANS</a></li>
                     <li><a href="#">COMPETITION</a></li>
