--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<div class="jumbotron">
 		<nav>
-			<img src="assets/logo2.png" alt="Logo" class="logo">
+			<a href="index.html">
+				<img src="assets/logo2.png" alt="Logo" class="logo">
+			</a>
 			<ul class="navigation">
 				<li><a href="plans.html">PLANS</a></li>
 				<li><a href="#">COMPETITION</a></li>
@@ -22,7 +24,7 @@
 		<div class="pitch">
 			<h1>Let's Rice</h1>
 			<h1>Together.</h1>
-			<button class="btn-yellow"><h2>LEARN MORE</h2></button>
+			<a class="more-btn" href="plans.html">LEARN MORE</a>
 		</div>
 	</div>
 	<h1 class="text-center wwd">What We Do</h1>
@@ -30,17 +32,17 @@
 		<div class="card">
 			<h3>Become a Farmer</h3>
 			<p>Join our community of farmers and enjoy lots of benefits.</p>
-			<a href="#">Learn more -></a>
+			<a href="plans.html">Learn more -></a>
 		</div>
 		<div class="card">
 			<h3>Invest in Rice Farming.</h3>
 			<p>Become one of our partners, enjoy savvy ROI from products.</p>
-			<a href="#">Learn more -></a>
+			<a href="plans.html">Learn more -></a>
 		</div>
 		<div class="card">
 			<h3>Join our Competition</h3>
 			<p>While you're here, you can also win amazing prices.</p>
-			<a href="#">Learn more -></a>
+			<a href="plans.html">Learn more -></a>
 		</div>
 	</div>
 	<div class="grid-container">
@@ -51,7 +53,7 @@
 			<div class="text">
 				<h1>Increase your earning potentials as a farmer.</h1>
 				<p>The present day economy has proven to be downsizing in other major ways. Agriculture on the far end is the new BAE Become a farmer today.</p>
-				<button class="btn-yellow"><h2>JOIN US</h2></button>
+				<a class="btn-yellow-link" href="plans.html">JOIN US</a>
 			</div>
 		</div>
 	</div>
@@ -60,7 +62,7 @@
 			<div class="text">
 				<h1>Let Rice grow your money.</h1>
 				<p>Imported Rice takes a high percentage on the scale of imported foodstuff in Nigeria. In the advent of closed borders and ban on importation, Invest in Rice and get savvy returns.</p>
-				<button class="btn-yellow"><h2>INVEST IN RICE</h2></button>
+				<a class="btn-yellow-link" href="plans.html">INVEST IN RICE</a>
 			</div>
 			<div class="image">
 				<img src="assets/img2.png" alt="">
@@ -75,7 +77,7 @@
 			<div class="text">
 				<h1>Win amazing take-home prizes.</h1>
 				<p>What's farming and no fun? What's investing without flex? Join our competiton and win amazing prizes.</p>
-				<button class="btn-yellow"><h2>APPLY NOW!</h2></button>
+				<a class="btn-yellow-link" href="plans.html">APPLY NOW!</a>
 			</div>
 		</div>
 	</div>
