--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="green-bg">
-        <div class="container">
+        <div class="container footer">
             <h1 class="invite">Join Our Newsletter</h1>
             <form action="">
                 <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
