--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
 	<div class="jumbotron">
 		<nav>
-			<a href="index.html">
-				<img src="assets/logo2.png" alt="Logo" class="logo">
-			</a>
-			<ul class="navigation">
-				<li><a href="plans.html">PLANS</a></li>
-				<li><a href="#">COMPETITION</a></li>
-				<li><a href="#">ABOUT US</a></li>
-				<li><a href="contact.html">CONTACT US</a></li>
-			</ul>
-		</nav>
+            <a href="index.html">
+                <img src="assets/logo2.png" alt="Logo" class="logo">
+            </a>
+            <ul class="navigation">
+                <li class="focus"><a href="plans.html">PLANS</a></li>
+                <li><a href="#">COMPETITION</a></li>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="contact.html">CONTACT US</a></li>
+            </ul>
+        </nav>
 		<div class="pitch">
 			<h1>Let's Rice</h1>
 			<h1>Together.</h1>
