--- a/plans.html
+++ b/plans.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <div class="green-bg">
-        <div class="container">
+        <div class="container footer">
             <h1>Join Our Newsletter</h1>
             <form action="">
                 <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
