--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </nav>
             <h1 class="mb-2">Drop that message.</h1>
             <div class="form-container">
-                <form action="" netlify class="contact-form">
+                <form name="Contact Form" method="POST" netlify class="contact-form">
                     <input type="text" name="name" id="" placeholder="Your name here...">
                     <input type="email" name="email" id="" placeholder="Your email here...">
                     <textarea name="message" placeholder="Your message here..."></textarea>
@@ -36,7 +36,7 @@
     <div class="green-bg">
         <div class="container footer">
             <h1 class="invite">Join Our Newsletter</h1>
-            <form action="">
+            <form name="Newsletter" method="POST" netlify>
                 <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
                 <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
             </form>
