--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 		<div class="winners container">
 			<div class="winner">
 				<div class="profile">
-					<img src="assets/img4.jpg" alt="">
+					<div class="winner-img">
+						<img src="assets/img4.jpg" alt="">
+					</div>
 					<div class="name">
 						<h4>Olubusayo Seyitan</h4>
 						<p>Farmer</p>
@@ -96,7 +98,9 @@
 			</div>
 			<div class="winner">
 				<div class="profile">
-					<img src="assets/img5.jpg" alt="">
+					<div class="winner-img">
+						<img src="assets/img5.jpg" alt="">
+					</div>
 					<div class="name">
 						<h4>Bart Kolawole</h4>
 						<p>Lawyer and Livestock Farmer</p>
@@ -106,7 +110,9 @@
 			</div>
 			<div class="winner">
 				<div class="profile">
-					<img src="assets/img5.jpg" alt="">
+					<div class="winner-img">
+						<img src="assets/img5.jpg" alt="">
+					</div>
 					<div class="name">
 						<h4>Puleng Vezi</h4>
 						<p>Student</p>
@@ -120,7 +126,7 @@
 	<footer>
 		<div>
 			<h1>Join Our Newsletter</h1>
-			<form netlify>
+			<form name="Newsletter" method="POST" netlify>
 				<input type="email" placeholder="Your e-mail here..." class="email-input">
 				<button type="submit" class="btn-yellow submit"><h2>SUBSCRIBE</h2></button>
 			</form>
