--- a/plans.html
+++ b/plans.html
@@ -107,7 +107,7 @@
     <div class="green-bg">
         <div class="container footer">
             <h1>Join Our Newsletter</h1>
-            <form action="">
+            <form name="Newsletter" method="POST" netlify>
                 <input type="email" name="email" class="email-input" placeholder="Your e-mail here...">
                 <button type="submit" class="btn-yellow"><h2>SUBSCRIBE</h2></button>
             </form>
